Fix signature count & sign button on narrow layout
Wasn't just in FF. Only showing up on person's question list as
it is a narrower design.

Close #310

--- a/app/assets/stylesheets/modules/questions.sass
+++ b/app/assets/stylesheets/modules/questions.sass
@@ -88,7 +88,7 @@ section.questions
       float: left
       vertical-align: top
       @media (min-width: 420px)
-        margin-right: 33px
+        // margin-right: 33px
         width: 70%
       a.title
         display: block
@@ -108,7 +108,7 @@ section.questions
     ul.activity
       margin:
         top: 18px
-        right: 5.5641026%
+        right: 3.85%
         bottom: 6px
       display: inline-block
       width: 20%
