--- a/app/assets/stylesheets/responsive.sass
+++ b/app/assets/stylesheets/responsive.sass
@@ -162,9 +162,11 @@
         margin-top: 6px
     ul.activity
       width: 40%
-      float: left
       text-align: left
       margin-top: 24px
+      margin-left: 28.5%
+    a.sign_on
+      margin-left: 22%
   section.question div.actions
     width: 85.714286%
     float: none
