--- a/app/assets/stylesheets/structure.sass
+++ b/app/assets/stylesheets/structure.sass
@@ -129,7 +129,6 @@ a.sign_on
   float: right
   margin:
     top: 12px
-    right: 18px
     bottom: 12px +border-radius(3px)
   padding:
     top: 12px
